Bug 177543 - unable to remove empty "recipient field"
Summary: unable to remove empty "recipient field"
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.10.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-12-11 23:49 UTC by Mike Frysinger
Modified: 2009-03-28 14:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Frysinger 2008-12-11 23:49:26 UTC
Version:           1.10.3 (using KDE 4.1.3)
Compiler:          gcc 4.3.2 x86_64
OS:                Linux
Installed from:    Gentoo Packages

in kde-3.5, the composer window had a dedicated button to delete a recipient entry (i.e. the to/cc/bcc/etc... lines).  with kde-4.1, it looks like the button was changed to an inline "clear text" thingy.  the problem is that this disappears when there is no actual text, and so the overloaded behavior of "clear text" and "remove entry" no longer works.

for example, open up a composer window, and then add a few people.  then select a target and do ctrl+a followed by ctrl+x (to select all and then cut).  the little clear text button disappears and if you want to kill the entry, you have to type some bogus text first.
Comment 1 FiNeX 2008-12-12 14:10:46 UTC
Confirmed using current trunk r895672.
Comment 2 Michael Leupold 2009-03-26 21:02:42 UTC
SVN commit 945063 by mleupold:

Automatically remove empty lines in the recipients-editor. On removing only move to the next line if the removed line has the focus.

BUG: 177543

 M  +17 -7     recipientseditor.cpp  
 M  +1 -0      recipientseditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945063
Comment 3 Michael Leupold 2009-03-28 14:11:40 UTC
SVN commit 945861 by mleupold:

Backport of r945063.

Automatically remove empty lines in the recipients-editor. On removing only move to the next line if the removed line has the focus.

CCBUG: 177543


 M  +17 -7     recipientseditor.cpp  
 M  +1 -0      recipientseditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945861