Automatically remove empty lines in the recipients-editor. On removing only move to the next line if the removed line has the focus.

BUG: 177543

svn path=/trunk/KDE/kdepim/; revision=945063